package VoyaTrip;

public class Trip {
}
